@@ -1,5 +1,9 @@
 2004-02-02  Derek Price  <derek@ximbiot.com>
 
+	* NEWS: Note new join-rm tests.
+
+2004-02-02  Derek Price  <derek@ximbiot.com>
+
 	* NEWS: Note update error message correction.
 
 2004-02-02  Derek Price  <derek@ximbiot.com>
